--- a/package.json
+++ b/package.json
@@ -6,15 +6,15 @@
   "scripts": {
     "start": "webpack-dev-server --open --config webpack.config.dev.js",
     "build": "webpack --config webpack.config.prod.js",
-    "eslint": "eslint \"src/\"",
-    "deploy": "npm run build && gh-pages -d dist"
+    "check": "eslint \"src/\"",
+    "deploy": "gh-pages -d dist -u helena.kolodko@gmail.com  -r https://github.com/Egor-kl/bsuir-NewsApi.git"
   },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/Egor-kl/bsuir-NewsApi.git"
   },
   "keywords": [],
-  "author": "",
+  "author": "helenakolodko",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/Egor-kl/bsuir-NewsApi/issues"
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@babel/core": "^7.16.0",
     "@babel/preset-env": "^7.16.0",
+    "@babel/preset-react": "^7.16.0",
     "babel-loader": "^8.2.3",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.5.1",
@@ -37,6 +38,7 @@
     "webpack-dev-server": "^4.5.0"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2"
   }
 }
